--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
-<!-- Flipkart PLA Engine Main HTML -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flipkart PLA Intelligence Engine</title>
+
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/variables.css" />
+  <link rel="stylesheet" href="./css/layout.css" />
+  <link rel="stylesheet" href="./css/components.css" />
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #f5f7fb, #eef1f7);
+      margin: 0;
+      color: #1e293b;
+    }
+
+    /* Header */
+    .app-header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      backdrop-filter: blur(16px);
+      background: rgba(255,255,255,0.75);
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.04);
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .header-inner {
+      width: 95%;
+      max-width: 1400px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo img {
+      height: 36px;
+    }
+
+    .app-title {
+      font-size: 18px;
+      font-weight: 600;
+      letter-spacing: 0.3px;
+    }
+
+    /* Reports Tabs */
+    .reports-section {
+      margin-top: 40px;
+      width: 95%;
+      max-width: 1400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .tabs {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      margin-bottom: 25px;
+    }
+
+    .tab-btn {
+      padding: 10px 20px;
+      border-radius: 14px;
+      border: none;
+      cursor: pointer;
+      background: white;
+      font-weight: 500;
+      transition: all 0.25s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+    }
+
+    .tab-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    }
+
+    .tab-btn.active {
+      background: #2563eb;
+      color: white;
+      box-shadow: 0 8px 20px rgba(37,99,235,0.4);
+    }
+
+    /* Report Card */
+    .report-container {
+      background: white;
+      border-radius: 18px;
+      padding: 30px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.06);
+      min-height: 400px;
+      transition: all 0.3s ease;
+    }
+
+    .report-title {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 20px;
+    }
+
+    .placeholder {
+      padding: 40px;
+      border-radius: 14px;
+      background: #f8fafc;
+      text-align: center;
+      color: #64748b;
+      font-size: 15px;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- Header -->
+  <header class="app-header">
+    <div class="header-inner">
+
+      <!-- Left: Logo -->
+      <div class="logo">
+        <img src="./assets/logo.png" alt="Logo">
+      </div>
+
+      <!-- Center: App Name -->
+      <div class="app-title">
+        Flipkart PLA Intelligence Engine
+      </div>
+
+      <!-- Right: Empty (future use: export / user menu) -->
+      <div></div>
+
+    </div>
+  </header>
+
+  <!-- Reports Section -->
+  <section class="reports-section">
+
+    <!-- Tabs -->
+    <div class="tabs">
+      <button class="tab-btn active" data-tab="pla">PLA Recommendation</button>
+      <button class="tab-btn" data-tab="stock">Stock Risk</button>
+      <button class="tab-btn" data-tab="listing">Listing Issues</button>
+      <button class="tab-btn" data-tab="scaling">Scaling Opportunities</button>
+    </div>
+
+    <!-- Report Container -->
+    <div class="report-container">
+      <div class="report-title">PLA Recommendation Report</div>
+      <div class="placeholder">
+        Data will load here after connecting Google Sheets.
+      </div>
+    </div>
+
+  </section>
+
+  <script>
+    const tabs = document.querySelectorAll(".tab-btn");
+    const reportTitle = document.querySelector(".report-title");
+
+    const titles = {
+      pla: "PLA Recommendation Report",
+      stock: "Stock Risk Report",
+      listing: "Listing Issue Report",
+      scaling: "Scaling Opportunity Report"
+    };
+
+    tabs.forEach(tab => {
+      tab.addEventListener("click", () => {
+        tabs.forEach(t => t.classList.remove("active"));
+        tab.classList.add("active");
+        reportTitle.textContent = titles[tab.dataset.tab];
+      });
+    });
+  </script>
+
+</body>
+</html>
