--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #f5f7fb, #eef1f7);
+      background: linear-gradient(135deg, #f4f7fb, #eef2f9);
       margin: 0;
       color: #1e293b;
     }
 
-    /* Header */
+    /* HEADER */
     .app-header {
       position: sticky;
       top: 0;
@@ -26,7 +26,7 @@
       backdrop-filter: blur(16px);
       background: rgba(255,255,255,0.75);
       border-bottom: 1px solid rgba(0,0,0,0.05);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.04);
+      box-shadow: 0 8px 30px rgba(0,0,0,0.05);
       height: 70px;
       display: flex;
       align-items: center;
@@ -36,15 +36,16 @@
     .header-inner {
       width: 95%;
       max-width: 1400px;
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
       align-items: center;
-      justify-content: space-between;
     }
 
     .logo {
+      justify-self: start;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 10px;
     }
 
     .logo img {
@@ -52,20 +53,39 @@
     }
 
     .app-title {
+      justify-self: center;
       font-size: 18px;
       font-weight: 600;
       letter-spacing: 0.3px;
     }
 
-    /* Reports Tabs */
-    .reports-section {
-      margin-top: 40px;
-      width: 95%;
-      max-width: 1400px;
-      margin-left: auto;
-      margin-right: auto;
+    .header-right {
+      justify-self: end;
     }
 
+    /* MAIN WRAPPER */
+    .main-wrapper {
+      width: 95%;
+      max-width: 1400px;
+      margin: 40px auto;
+    }
+
+    /* SUMMARY PLACEHOLDER */
+    .summary-placeholder {
+      height: 120px;
+      border-radius: 18px;
+      background: rgba(255,255,255,0.8);
+      border: 1px dashed rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 35px;
+      color: #64748b;
+      font-size: 14px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.05);
+    }
+
+    /* REPORT TABS */
     .tabs {
       display: flex;
       gap: 12px;
@@ -74,7 +94,7 @@
     }
 
     .tab-btn {
-      padding: 10px 20px;
+      padding: 10px 22px;
       border-radius: 14px;
       border: none;
       cursor: pointer;
@@ -95,13 +115,13 @@
       box-shadow: 0 8px 20px rgba(37,99,235,0.4);
     }
 
-    /* Report Card */
+    /* REPORT CARD */
     .report-container {
       background: white;
-      border-radius: 18px;
+      border-radius: 20px;
       padding: 30px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.06);
-      min-height: 400px;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.06);
+      min-height: 500px;
       transition: all 0.3s ease;
     }
 
@@ -112,8 +132,8 @@
     }
 
     .placeholder {
-      padding: 40px;
-      border-radius: 14px;
+      padding: 50px;
+      border-radius: 16px;
       background: #f8fafc;
       text-align: center;
       color: #64748b;
@@ -124,30 +144,32 @@
 
 <body>
 
-  <!-- Header -->
+  <!-- HEADER -->
   <header class="app-header">
     <div class="header-inner">
-
-      <!-- Left: Logo -->
       <div class="logo">
         <img src="./assets/logo.png" alt="Logo">
       </div>
 
-      <!-- Center: App Name -->
       <div class="app-title">
         Flipkart PLA Intelligence Engine
       </div>
 
-      <!-- Right: Empty (future use: export / user menu) -->
-      <div></div>
-
+      <div class="header-right">
+        <!-- Future: Export / Profile -->
+      </div>
     </div>
   </header>
 
-  <!-- Reports Section -->
-  <section class="reports-section">
+  <!-- MAIN -->
+  <div class="main-wrapper">
 
-    <!-- Tabs -->
+    <!-- SUMMARY PLACEHOLDER -->
+    <div class="summary-placeholder">
+      Summary Section (Reserved – To Be Added Later)
+    </div>
+
+    <!-- REPORT TABS -->
     <div class="tabs">
       <button class="tab-btn active" data-tab="pla">PLA Recommendation</button>
       <button class="tab-btn" data-tab="stock">Stock Risk</button>
@@ -155,15 +177,15 @@
       <button class="tab-btn" data-tab="scaling">Scaling Opportunities</button>
     </div>
 
-    <!-- Report Container -->
+    <!-- REPORT CONTAINER -->
     <div class="report-container">
       <div class="report-title">PLA Recommendation Report</div>
       <div class="placeholder">
-        Data will load here after connecting Google Sheets.
+        Report data will render here after connecting master sheets.
       </div>
     </div>
 
-  </section>
+  </div>
 
   <script>
     const tabs = document.querySelectorAll(".tab-btn");
