--- a/index.html
+++ b/index.html
@@ -43,11 +43,22 @@
   <main class="main-wrapper">
 
     <!-- Summary Placeholder (Reserved for Future KPIs) -->
-    <section class="summary-section">
-      <div class="summary-placeholder">
-        Summary Section (Reserved – To Be Added Later)
-      </div>
-    </section>
+    <!-- ================= SUMMARY SECTION ================= -->
+<section class="summary-section">
+
+  <!-- Traffic Summary -->
+  <div class="summary-group">
+    <h2 class="summary-heading">Traffic Summary</h2>
+    <div class="summary-grid" id="traffic-summary"></div>
+  </div>
+
+  <!-- Sales Summary -->
+  <div class="summary-group">
+    <h2 class="summary-heading">Sales Summary</h2>
+    <div class="summary-grid" id="sales-summary"></div>
+  </div>
+
+</section>
 
 
     <!-- ================= REPORT TABS ================= -->
