--- a/index.html
+++ b/index.html
@@ -42,23 +42,22 @@
   <!-- ================= MAIN WRAPPER ================= -->
   <main class="main-wrapper">
 
-    <!-- Summary Placeholder (Reserved for Future KPIs) -->
     <!-- ================= SUMMARY SECTION ================= -->
-<section class="summary-section">
+    <section class="summary-section">
 
-  <!-- Traffic Summary -->
-  <div class="summary-group">
-    <h2 class="summary-heading">Traffic Summary</h2>
-    <div class="summary-grid" id="traffic-summary"></div>
-  </div>
+      <!-- Traffic Summary -->
+      <div class="summary-group">
+        <h2 class="summary-heading">Traffic Summary</h2>
+        <div class="summary-grid" id="traffic-summary"></div>
+      </div>
 
-  <!-- Sales Summary -->
-  <div class="summary-group">
-    <h2 class="summary-heading">Sales Summary</h2>
-    <div class="summary-grid" id="sales-summary"></div>
-  </div>
+      <!-- Sales Summary -->
+      <div class="summary-group">
+        <h2 class="summary-heading">Sales Summary</h2>
+        <div class="summary-grid" id="sales-summary"></div>
+      </div>
 
-</section>
+    </section>
 
 
     <!-- ================= REPORT TABS ================= -->
@@ -101,51 +100,60 @@
 
   <!-- ================= JS MODULE LOADER ================= -->
   <script type="module">
-  import { CONFIG } from "./js/core/config.js";
-  import { fetchCSV } from "./js/core/dataLoader.js";
-  import { mergeData } from "./js/logic/decisionEngine.js";
-  import { renderPLAReport } from "./js/reports/plaRecommendation.js";
-  import { renderStockRisk } from "./js/reports/stockRisk.js";
-  import { renderListingIssues } from "./js/reports/listingIssue.js";
-  import { renderScalingOpportunities } from "./js/reports/scaling.js";
+    import { CONFIG } from "./js/core/config.js";
+    import { fetchCSV } from "./js/core/dataLoader.js";
+    import { mergeData } from "./js/logic/decisionEngine.js";
+    import { renderPLAReport } from "./js/reports/plaRecommendation.js";
+    import { renderStockRisk } from "./js/reports/stockRisk.js";
+    import { renderListingIssues } from "./js/reports/listingIssue.js";
+    import { renderScalingOpportunities } from "./js/reports/scaling.js";
+    import { renderSummary } from "./js/reports/summary.js";
 
-  let mergedData = [];
+    let mergedData = [];
 
-  async function init() {
-    const traffic = await fetchCSV(CONFIG.TRAFFIC_URL);
-    const sales = await fetchCSV(CONFIG.SALES_URL);
+    async function init() {
+      const traffic = await fetchCSV(CONFIG.TRAFFIC_URL);
+      const sales = await fetchCSV(CONFIG.SALES_URL);
 
-    mergedData = mergeData(traffic, sales);
-    renderPLAReport(mergedData);
-  }
+      mergedData = mergeData(traffic, sales);
 
-  init();
+      /* ===== NEW ADDITION: SUMMARY RENDER ===== */
+      renderSummary(mergedData);
 
-  const tabs = document.querySelectorAll(".tab-btn");
-  const reportTitle = document.querySelector(".report-title");
+      /* ===== EXISTING REPORT LOAD ===== */
+      renderPLAReport(mergedData);
+    }
 
-  const titles = {
-    pla: "PLA Recommendation Report",
-    stock: "Stock Risk Report",
-    listing: "Listing Issue Report",
-    scaling: "Scaling Opportunity Report"
-  };
+    init();
 
-  tabs.forEach(tab => {
-    tab.addEventListener("click", () => {
-      tabs.forEach(t => t.classList.remove("active"));
-      tab.classList.add("active");
+    /* ================= TAB LOGIC ================= */
 
-      const type = tab.dataset.tab;
-      reportTitle.textContent = titles[type];
+    const tabs = document.querySelectorAll(".tab-btn");
+    const reportTitle = document.querySelector(".report-title");
 
-      if (type === "pla") renderPLAReport(mergedData);
-      if (type === "stock") renderStockRisk(mergedData);
-      if (type === "listing") renderListingIssues(mergedData);
-      if (type === "scaling") renderScalingOpportunities(mergedData);
+    const titles = {
+      pla: "PLA Recommendation Report",
+      stock: "Stock Risk Report",
+      listing: "Listing Issue Report",
+      scaling: "Scaling Opportunity Report"
+    };
+
+    tabs.forEach(tab => {
+      tab.addEventListener("click", () => {
+        tabs.forEach(t => t.classList.remove("active"));
+        tab.classList.add("active");
+
+        const type = tab.dataset.tab;
+        reportTitle.textContent = titles[type];
+
+        if (type === "pla") renderPLAReport(mergedData);
+        if (type === "stock") renderStockRisk(mergedData);
+        if (type === "listing") renderListingIssues(mergedData);
+        if (type === "scaling") renderScalingOpportunities(mergedData);
+      });
     });
-  });
-</script>
+
+  </script>
 
 </body>
 </html>
