--- a/index.html
+++ b/index.html
@@ -100,60 +100,61 @@
 
   <!-- ================= JS MODULE LOADER ================= -->
   <script type="module">
-    import { CONFIG } from "./js/core/config.js";
-    import { fetchCSV } from "./js/core/dataLoader.js";
-    import { mergeData } from "./js/logic/decisionEngine.js";
-    import { renderPLAReport } from "./js/reports/plaRecommendation.js";
-    import { renderStockRisk } from "./js/reports/stockRisk.js";
-    import { renderListingIssues } from "./js/reports/listingIssue.js";
-    import { renderScalingOpportunities } from "./js/reports/scaling.js";
-    import { renderSummary } from "./js/reports/summary.js";
+  import { CONFIG } from "./js/core/config.js";
+  import { fetchCSV } from "./js/core/dataLoader.js";
+  import { mergeData } from "./js/logic/decisionEngine.js";
+  import { renderPLAReport } from "./js/reports/plaRecommendation.js";
+  import { renderStockRisk } from "./js/reports/stockRisk.js";
+  import { renderListingIssues } from "./js/reports/listingIssue.js";
+  import { renderScalingOpportunities } from "./js/reports/scaling.js";
+  import { renderSummaryFromSheet } from "./js/reports/summary.js";
 
-    let mergedData = [];
+  const SUMMARY_URL = "PASTE_YOUR_SUMMARY_CSV_LINK_HERE";
 
-    async function init() {
-      const traffic = await fetchCSV(CONFIG.TRAFFIC_URL);
-      const sales = await fetchCSV(CONFIG.SALES_URL);
+  let mergedData = [];
 
-      mergedData = mergeData(traffic, sales);
+  async function init() {
 
-      /* ===== NEW ADDITION: SUMMARY RENDER ===== */
-      renderSummary(mergedData);
+    const [traffic, sales, summary] = await Promise.all([
+      fetchCSV(CONFIG.TRAFFIC_URL),
+      fetchCSV(CONFIG.SALES_URL),
+      fetchCSV(SUMMARY_URL)
+    ]);
 
-      /* ===== EXISTING REPORT LOAD ===== */
-      renderPLAReport(mergedData);
-    }
+    mergedData = mergeData(traffic, sales);
 
-    init();
+    renderSummaryFromSheet(summary);
+    renderPLAReport(mergedData);
+  }
 
-    /* ================= TAB LOGIC ================= */
+  init();
 
-    const tabs = document.querySelectorAll(".tab-btn");
-    const reportTitle = document.querySelector(".report-title");
+  const tabs = document.querySelectorAll(".tab-btn");
+  const reportTitle = document.querySelector(".report-title");
 
-    const titles = {
-      pla: "PLA Recommendation Report",
-      stock: "Stock Risk Report",
-      listing: "Listing Issue Report",
-      scaling: "Scaling Opportunity Report"
-    };
+  const titles = {
+    pla: "PLA Recommendation Report",
+    stock: "Stock Risk Report",
+    listing: "Listing Issue Report",
+    scaling: "Scaling Opportunity Report"
+  };
 
-    tabs.forEach(tab => {
-      tab.addEventListener("click", () => {
-        tabs.forEach(t => t.classList.remove("active"));
-        tab.classList.add("active");
+  tabs.forEach(tab => {
+    tab.addEventListener("click", () => {
+      tabs.forEach(t => t.classList.remove("active"));
+      tab.classList.add("active");
 
-        const type = tab.dataset.tab;
-        reportTitle.textContent = titles[type];
+      const type = tab.dataset.tab;
+      reportTitle.textContent = titles[type];
 
-        if (type === "pla") renderPLAReport(mergedData);
-        if (type === "stock") renderStockRisk(mergedData);
-        if (type === "listing") renderListingIssues(mergedData);
-        if (type === "scaling") renderScalingOpportunities(mergedData);
-      });
+      if (type === "pla") renderPLAReport(mergedData);
+      if (type === "stock") renderStockRisk(mergedData);
+      if (type === "listing") renderListingIssues(mergedData);
+      if (type === "scaling") renderScalingOpportunities(mergedData);
     });
+  });
 
-  </script>
+</script>
 
 </body>
 </html>
